{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 171,
  "lineage": "a29b3598-3a2b-2061-2ec2-459f691a8cca",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/lb-public-ip"
              }
            ],
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb",
            "location": "westeurope",
            "name": "udacity-lb",
            "resource_group_name": "Azuredevops",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "development",
              "project": "udacity"
            }
          },
          "dependencies": [
            "azurerm_public_ip.lb_public_ip",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/backendAddressPools/backend-pool",
            "loadbalancer_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb",
            "name": "backend-pool"
          },
          "dependencies": [
            "azurerm_lb.load_balancer",
            "azurerm_public_ip.lb_public_ip",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/probes/http-probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.load_balancer",
            "azurerm_public_ip.lb_public_ip",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/backendAddressPools/backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb",
            "name": "http-rule",
            "probe_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/probes/http-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.load_balancer",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_lb_probe.http_probe",
            "azurerm_public_ip.lb_public_ip",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-0",
            "internal_domain_name_suffix": "ftysgfgb4eiuxmxiokorwgbxje.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-vm-0",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity-vnet/subnets/udacity-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "udacity-vm-nic-0",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "environment": "development",
              "project": "udacity"
            }
          },
          "dependencies": [
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-1",
            "internal_domain_name_suffix": "ftysgfgb4eiuxmxiokorwgbxje.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-vm-1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity-vnet/subnets/udacity-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "udacity-vm-nic-1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "environment": "development",
              "project": "udacity"
            }
          },
          "dependencies": [
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "nic_lb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/backendAddressPools/backend-pool",
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-0/ipConfigurations/internal-vm-0|/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/backendAddressPools/backend-pool",
            "ip_configuration_name": "internal-vm-0",
            "network_interface_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-0"
          },
          "dependencies": [
            "azurerm_lb.load_balancer",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.vm_nic",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/backendAddressPools/backend-pool",
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-1/ipConfigurations/internal-vm-1|/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/udacity-lb/backendAddressPools/backend-pool",
            "ip_configuration_name": "internal-vm-1",
            "network_interface_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-1"
          },
          "dependencies": [
            "azurerm_lb.load_balancer",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.vm_nic",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/udacity-nsg",
            "location": "westeurope",
            "name": "udacity-nsg",
            "resource_group_name": "Azuredevops",
            "security_rule": [],
            "tags": {
              "environment": "development",
              "project": "udacity"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_intra_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/udacity-nsg/securityRules/AllowIntraSubnet",
            "name": "AllowIntraSubnet",
            "network_security_group_name": "udacity-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/udacity-nsg/securityRules/AllowLoadBalancer",
            "name": "AllowLoadBalancer",
            "network_security_group_name": "udacity-nsg",
            "priority": 101,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.69.83.98",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "lb-public-ip",
            "resource_group_name": "Azuredevops",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "development",
              "project": "udacity"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity-vnet/subnets/udacity-subnet",
            "name": "udacity-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Azuredevops",
            "virtual_network_name": "udacity-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity-vnet/subnets/udacity-subnet",
            "network_security_group_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/udacity-nsg",
            "subnet_id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity-vnet/subnets/udacity-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1423f12c-f1c1-4b11-b2e8-729d1b18374c",
            "id": "/subscriptions/c2974833-f9d6-49e2-b843-74513c83a919/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity-vnet",
            "location": "westeurope",
            "name": "udacity-vnet",
            "resource_group_name": "Azuredevops",
            "tags": {
              "environment": "development",
              "project": "udacity"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}